# dc-zoom-meeting-logger

./: .gitignore  LICENSE  README.md  app.py  google_sheet.py  package.json  pyproject.toml  serverless.yml  sns2xls.py
docs/: README.md
examples/: meeting.ended.json  meeting.participant_joined.json  meeting.participant_left.json  meeting.started.json  snsevent.json
